# ctx_guard

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  package-lock.json  package.json  script.py
evals/: README.md  analyze.py  config_manager.py  models.json  run_all.sh
evals/configs/: openai-gpt-oss-20b.toml  qwen-qwen3-vl-4b.toml
evals/quality/: config.json  runner.py
evals/quality/challenges/: cargo_build_error.json  jest_test_failure.json  python_script_error.json
evals/quality/fixtures/cargo_failure/: Cargo.toml
evals/quality/fixtures/cargo_failure/src/: main.rs
evals/speed/: absolute_tokens.py  config.json  relative_context_window.py  runner.py
src/: config.rs  executor.rs  lib.rs  llm.rs  main.rs  output.rs
tests/: auth.test.js  integration_test.rs
