[package]
name = "ctx_guard"
version = "0.1.0"
edition = "2021"

[lib]
name = "ctx_guard"
path = "src/lib.rs"

[[bin]]
name = "cg"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "6"
thiserror = "2"

